# verifyvenice

./: .env.example  .gitignore  README.md  config.yaml
data/processed/: adversarial_results.json  analysis_results.json  calibration.json  feature_matrix.npz  group_a_results.json  system_prompt_diff.json  temporal_consistency.json
data/proofs/: model_fingerprint_meta.json  output_comparison_meta.json
docs/: independence-commitment.md  limitations.md  methodology.md  zkml-architecture.md
models/: model_fingerprint.onnx  model_fingerprint.onnx.data  output_comparison.onnx  output_comparison.onnx.data
python/: pyproject.toml
python/scripts/: run_analysis.py  run_collection.py  run_onnx_export.py  run_report.py
python/src/: config.py
python/src/analysis/: calibration.py  fingerprint.py  similarity.py  statistical.py
python/src/clients/: local.py  reference.py  venice.py
python/src/collectors/: base.py  model_authenticity.py  output_integrity.py
python/src/exporters/: data_export.py  onnx_export.py
python/src/report/: generator.py
python/tests/: conftest.py  test_analysis_pipeline.py  test_calibration.py  test_clients.py  test_config.py  test_fingerprint.py  test_report.py  test_similarity.py  test_statistical.py
reports/: report_20260303_175333.md  report_20260303_184921.md
rust/: Cargo.toml  rust-toolchain.toml
rust/circuits-common/: Cargo.toml
rust/circuits-common/src/: lib.rs
rust/model-fingerprint/: Cargo.toml
rust/model-fingerprint/examples/: prove_fingerprint.rs
rust/model-fingerprint/src/: lib.rs
rust/models/: model_fingerprint.onnx  output_comparison.onnx
rust/output-comparison/: Cargo.toml
rust/output-comparison/examples/: prove_comparison.rs
rust/output-comparison/src/: lib.rs
