[workspace]
members = [
    "circuits-common",
    "output-comparison",
    "model-fingerprint",
]
resolver = "2"

[workspace.dependencies]
jolt-atlas-core = { git = "https://github.com/ICME-Lab/jolt-atlas", branch = "main" }
atlas-onnx-tracer = { git = "https://github.com/ICME-Lab/jolt-atlas", branch = "main" }
ark-bn254 = "0.5.0"
ark-serialize = { version = "0.5.0", default-features = false, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }

[profile.release]
lto = true
debug = 1
